@@ -1,0 +1,11 @@
+; $Id$
+[advanced help settings]
+hide = TRUE
+line break = TRUE
+
+[style-fluid-grid]
+title = "Fluid grid output style"
+popup width = 600
+popup height = 600
+parent = views%style
+weight = -5
