@@ -10,6 +10,7 @@
  * Implementation of hook_views_plugins().
  */
 function views_fluid_grid_views_plugins() {
+  $module_path = drupal_get_path('module', 'views_fluid_grid');
   return array(
     'module' => 'views_fluid_grid', // This just tells our themes are elsewhere.
     'style' => array(
@@ -17,16 +18,15 @@ function views_fluid_grid_views_plugins() {
         'title' => t('Fluid grid'),
         'help' => t('Displays items in a fluid grid.'),
         'handler' => 'views_fluid_grid_plugin_style',
-        'path' => drupal_get_path('module', 'views_fluid_grid') . '/views',
-        'theme path' => drupal_get_path('module', 'views_fluid_grid') . '/theme',
+        'path' => $module_path .'/views',
+        'theme path' => $module_path .'/theme',
         'theme file' => 'theme.inc',
         'theme' => 'views_fluid_grid_plugin_style',
         'uses row plugin' => TRUE,
         'uses options' => TRUE,
         'uses grouping' => FALSE,
         'type' => 'normal',
-        // @todo: Add advanced_help support.
-        //'help topic' => 'style-fluid-grid',
+        'help topic' => 'style-fluid-grid',
       ),
     ),
   );
